stage/chat-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-service
  labels:
    app: chat-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chat-service
  template:
    metadata:
      labels:
        app: chat-service
    spec:
      containers:
        - name: chat-service
          image: hasitha2021/chat-service:stage-latest
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: chat-service
spec:
  type: ClusterIP
  selector:
    app: chat-service
  ports:
  - port: 9191
    targetPort: 8000
    protocol: TCP
