stage/edit-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: edit-service-deployment
  labels:
    app: edit-service-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: edit-service
  template:
    metadata:
      labels:
        app: edit-service
    spec:
      containers:
        - name: edit-service
          image: hasitha2021/edit-service:stage-latest
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: edit-service-svc
spec:
  type: ClusterIP
  selector:
    app: edit-service
  ports:
  - port: 9192
    targetPort: 8000
    protocol: TCP
