stage/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openai-microservices-ingress-stage
spec:
  ingressClassName: nginx
  rules:
  - host: openai-service-stage.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: chat-service-svc
              port:
                number: 9191
        - path: /chat
          pathType: Prefix
          backend:
            service:
              name: chat-service-svc
              port:
                number: 9191
        - path: /edit
          pathType: Prefix
          backend:
            service:
              name: edit-service-svc
              port:
                number: 9192
        - path: /completions
          pathType: Prefix
          backend:
            service:
              name: completions-service-svc
              port:
                number: 9193
        - path: /image
          pathType: Prefix
          backend:
            service:
              name: image-service-svc
              port:
                number: 9194
